top-banner added

--- a/index.html
+++ b/index.html
@@ -5,9 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>pubg-mobile-portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Festive&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>WECOME TO</h1>
+    <h1> <span class="orange-color"> PUBG MOBILE</span> WORLD</h1>
+    <h3>Find Enemy And Shoot</h3>
+    <P>Hi i am a pubg mobile player.After a few days ago i search google which game is most favourate battle ground game.Then the google answrer me pubg mobile is the best battle ground game.The full meaning of pubg mobile ias player unknown battle ground.I love to play pubg.</P>
+    <a class="link-button" target="_blank" href="https://www.facebook.com/profile.php?id=100015179167735">HiRE ME</a>
+        </div>
+        <div>
+            <img class="half-width" src="images/Taher-picture-with-bg.png.png" alt="">
+            
+        </div>
+    </section>
     
 </body>
 </html>
