--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="top-banner">
+    <section class="top-banne flexible-container">
         <div class="half-width">
             <h1>WECOME TO</h1>
     <h1> <span class="orange-color"> PUBG MOBILE</span> WORLD</h1>
@@ -22,6 +22,33 @@
         <div>
             <img class="half-width" src="images/Taher-picture-with-bg.png.png" alt="">
             
+        </div>
+    </section>
+    <section class="dream-big flexible-container">
+        <div>
+            <img class="half-width" src="images/taher-2-picture-with-bg (1).png" alt="">
+        </div>
+        <div>
+            <h1>m416 spray op</h1>
+            <h1>Groza is op</h1>
+            <h3>All Pubg Player are op</h3>
+            <p>Hi i am a pubg mobile player.After a few days ago i search google which game is most favourate battle ground game.Then the google answrer me pubg mobile is the best battle ground game.The full meaning of pubg mobile ias player unknown battle ground.I love to play pubg.</p>
+            <a class="link-button" target="_blank" href="https://www.facebook.com/profile.php?id=100015179167735">DOWNLOAD RESUME</a>
+        </div>
+    </section>
+    <section class="experience-area">
+        <h1>EXPERIENCE</h1>
+        <div class="flexible-container">
+            <div id="web-dev-experience" class="experience-item">
+                <h1>Pro Level Competetive Player</h1>
+                <h3 class="orange-color">2022 present | pro level player</h3>
+                <p>Hi i am a pubg mobile player.After a few days ago i search google which game is most favourate battle ground game.Then the google answrer me pubg mobile is the best battle ground game.The full meaning of pubg mobile ias player unknown battle ground.I love to play pubg.</p>
+            </div>
+            <div id="full-stack" class="experience-item">
+                <h1>CLASSIC PLAYER</h1>
+                <h3 class="orange-color">2024 present | pro level camper</h3>
+                <p>Hi i am a pubg mobile player.After a few days ago i search google which game is most favourate battle ground game.Then the google answrer me pubg mobile is the best battle ground game.The full meaning of pubg mobile ias player unknown battle ground.I love to play pubg.</p>
+            </div>
         </div>
     </section>
     
